Fix list colour contrast on sign up page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,6 +11,10 @@ body {
   min-height: 100vh;
 }
 
+li {
+  color: #fdfffd;
+}
+
 /* Scrollbars */
 ::-webkit-scrollbar {
   width: 10px;
